--- a/FRONT-END/src/app/modules/clients/clients.component.html
+++ b/FRONT-END/src/app/modules/clients/clients.component.html
@@ -1,20 +1,8 @@
 <!-- PLANTILLA CRUD -->
-<app-crud 
-  [items]="filteredClients" 
-  [columns]="columns" 
-  [canDelete]="false"
-  [canExport]="true" 
-  [canSeeDetail]="false"
-  
-  [canChangeStatus]="true"
-  [showStateColumn]="true"
-  [statusField]="'estadoCliente'"
-
-  (create)="openCreateModal()"
-  (export)="exportClients()" 
-  (edit)="openEditModal($event)"
-  (search)="searchClients($event)"
-  (statusChange)="changeClientStatus($event)">
+<app-crud [items]="filteredClients" [columns]="columns" [canDelete]="false" [canExport]="true" [canSeeDetail]="true"
+  [canChangeStatus]="true" [showStateColumn]="true" [statusField]="'estadoCliente'" (create)="openCreateModal()"
+  (export)="exportClients()" (edit)="openEditModal($event)" (detail)="openHistoryModal($event)"
+  (search)="searchClients($event)" (statusChange)="changeClientStatus($event)">
 </app-crud>
 
 <!-- FORMULARIOS -->
@@ -22,14 +10,14 @@
 <p-dialog [(visible)]="showModal" [style]="{width: '450px'}" [header]="isEditing ? 'Editar Cliente' : 'Crear Cliente'"
   [modal]="true" class="p-fluid" appCrudModal [isEditing]="isEditing" (save)="saveClient()" (cancel)="closeModal()">
   <ng-template pTemplate="content">
-    <form [formGroup]="clientForm">    
+    <form [formGroup]="clientForm">
 
       <div class="field" [ngClass]="{'error': isFieldInvalid('cedulaCliente')}">
         <label for="cedulaCliente">Cédula</label>
         <input type="text" pInputText id="cedulaCliente" formControlName="cedulaCliente" maxlength="15" autofocus />
         <small class="p-error" *ngIf="isFieldInvalid('cedulaCliente')">
           {{ getErrorMessage('cedulaCliente') }}
-        </small>        
+        </small>
       </div>
 
       <div class="field-group">
@@ -58,10 +46,11 @@
             {{ getErrorMessage('direccionCliente') }}
           </small>
         </div>
-        
+
         <div class="field" [ngClass]="{'error': isFieldInvalid('telefonoCliente')}">
           <label for="telefonoCliente">Teléfono</label>
-          <input type="text" pInputText id="telefonoCliente" formControlName="telefonoCliente" minlength="7" maxlength="10" />
+          <input type="text" pInputText id="telefonoCliente" formControlName="telefonoCliente" minlength="7"
+            maxlength="10" />
           <small class="p-error" *ngIf="isFieldInvalid('telefonoCliente')">
             {{ getErrorMessage('telefonoCliente') }}
           </small>
@@ -70,10 +59,53 @@
     </form>
   </ng-template>
   <ng-template pTemplate="footer">
-    <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text custom-cancel-btn" 
-            (click)="closeModal()" (click)="cancelModalMessage()" aria-label="Cancelar"></button>
-    <button pButton pRipple [label]="isEditing ? 'Actualizar' : 'Guardar'" icon="pi pi-check" 
-            class="p-button-text custom-save-btn" (click)="saveClient()" aria-label="Guardar"></button>
+    <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text custom-cancel-btn"
+      (click)="closeModal()" (click)="cancelModalMessage()" aria-label="Cancelar"></button>
+    <button pButton pRipple [label]="isEditing ? 'Actualizar' : 'Guardar'" icon="pi pi-check"
+      class="p-button-text custom-save-btn" (click)="saveClient()" aria-label="Guardar"></button>
   </ng-template>
 </p-dialog>
 
+<p-dialog [(visible)]="showHistoryModal" [style]="{width: '80vw'}" [modal]="true" [resizable]="false"
+  [draggable]="false">
+  <ng-template pTemplate="header">
+    Historial de Crédito
+  </ng-template>
+  <ng-template pTemplate="content">
+    <p-table [value]="historyItems" [paginator]="true" [rows]="10">
+
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Fecha</th>
+          <th>Tipo</th>
+          <th>Estado</th>
+          <th>Monto</th>
+          <th>Saldo</th>
+        </tr>
+      </ng-template>
+
+      <ng-template pTemplate="body" let-item>
+        <tr [ngClass]="{'anulado-row': item.tipo === 'Abono' && item.estadoAbono === false}">
+          <td>{{item.fecha | date:'short'}}</td>
+          <td>
+            <span [ngClass]="{
+              'abono-chip': item.tipo === 'Abono', 
+              'cargo-chip': item.tipo === 'Abono' && item.estadoAbono === false,
+              'credito-chip': item.tipo === 'Crédito'
+            }" class="tipo-chip">
+              {{item.tipo}}
+            </span>
+          </td>
+          <td>
+            <ng-container *ngIf="item.tipo === 'Abono'">
+              {{item.estadoAbono ? 'Activo' : 'Anulado'}}
+            </ng-container>
+          </td>
+          <td>{{item.monto | currency}}</td>
+          <td>{{item.saldo | currency}}</td>
+        </tr>
+      </ng-template>
+
+    </p-table>
+  </ng-template>
+</p-dialog>
