--- a/FRONT-END/src/app/layout/topbar/topbar.component.css
+++ b/FRONT-END/src/app/layout/topbar/topbar.component.css
@@ -1,8 +1,3 @@
-.menu {
-  border: none;
-  background-color: #ffffff;
-}
-
 .topbar {
   position: fixed;
   height: 4rem;
@@ -14,59 +9,106 @@
   background-color: #ffffff;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, .02), 0px 0px 2px rgba(0, 0, 0, .05), 0px 1px 4px rgba(0, 0, 0, .08);
+}
+
+.menu {
+  border: none;
+  background-color: #ffffff;
+  cursor: pointer;
+}
+
+.btn-logout {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 8px 15px;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+
+.btn-logout i {
+  color: black;
+  font-size: 18px;
+  margin-right: 8px;
+}
+
+.btn-logout span {
+  color: black;
+}
+
+.btn-logout:hover i,
+.btn-logout:hover span {
+  color: #69C7F1;
 }
 
 @media (max-width: 991px) {
   .topbar {
-      justify-content: space-between;
+    justify-content: space-between;
   }
+  
   .topbar .topbar-logo {
-      width: auto;
-      order: 2;
+    width: auto;
+    order: 2;
   }
+  
   .topbar .menu-button {
-      margin-left: 0;
-      order: 1;
+    margin-left: 0;
+    order: 1;
   }
+  
   .topbar .topbar-menu-button {
-      display: inline-flex;
-      margin-left: 0;
-      order: 3;
+    display: inline-flex;
+    margin-left: 0;
+    order: 3;
   }
+  
   .topbar .topbar-menu {
-      margin-left: 0;
-      position: absolute;
-      flex-direction: column;
-      background-color: var(--surface-overlay);
-      box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.02), 0px 0px 2px rgba(0, 0, 0, 0.05), 0px 1px 4px rgba(0, 0, 0, 0.08);
-      border-radius: 12px;
-      padding: 1rem;
-      right: 2rem;
-      top: 5rem;
-      min-width: 15rem;
-      display: none;
-      -webkit-animation: scalein 0.15s linear;
-      animation: scalein 0.15s linear;
+    margin-left: 0;
+    position: absolute;
+    flex-direction: column;
+    background-color: var(--surface-overlay);
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.02), 0px 0px 2px rgba(0, 0, 0, 0.05), 0px 1px 4px rgba(0, 0, 0, 0.08);
+    border-radius: 12px;
+    padding: 1rem;
+    right: 2rem;
+    top: 5rem;
+    min-width: 15rem;
+    display: none;
+    -webkit-animation: scalein 0.15s linear;
+    animation: scalein 0.15s linear;
   }
+  
   .topbar .topbar-menu.topbar-menu-mobile-active {
-      display: block;
+    display: block;
   }
+  
   .topbar .topbar-menu .topbar-button {
-      margin-left: 0;
-      display: flex;
-      width: 100%;
-      height: auto;
-      justify-content: flex-start;
-      border-radius: 12px;
-      padding: 1rem;
+    margin-left: 0;
+    display: flex;
+    width: 100%;
+    height: auto;
+    justify-content: flex-start;
+    border-radius: 12px;
+    padding: 1rem;
   }
+  
   .topbar .topbar-menu .topbar-button i {
-      font-size: 1rem;
-      margin-right: 0.5rem;
+    font-size: 1rem;
+    margin-right: 0.5rem;
   }
+  
   .topbar .topbar-menu .topbar-button span {
-      font-weight: medium;
-      display: block;
+    font-weight: medium;
+    display: block;
+  }
+}
+
+/* Asegurarse de que el botón de logout permanezca a la derecha en dispositivos móviles */
+@media (max-width: 991px) {
+  .btn-logout {
+    order: 3;
   }
 }
