--- a/FRONT-END/src/app/layout/topbar/topbar.component.html
+++ b/FRONT-END/src/app/layout/topbar/topbar.component.html
@@ -2,4 +2,10 @@
   <button (click)="toggleSidebarVisibility()" class="menu">
     <i class="pi pi-bars"></i>
   </button>
+
+  <!-- Botón de cerrar sesión alineado a la derecha -->
+  <button (click)="logout()" class="btn-logout">
+    <i class="pi pi-sign-out"></i>
+    Cerrar sesión
+  </button>
 </header>
