una cosa pequeña en compras

--- a/FRONT-END/src/app/layout/sidebar/sidebar.component.html
+++ b/FRONT-END/src/app/layout/sidebar/sidebar.component.html
@@ -21,7 +21,7 @@
           <li class="item" routerLink="/providers" routerLinkActive="active" (click)="closeSidebar()">
             <i class="pi pi-truck mr-2" style="color:yellowgreen;"></i><a>Proveedores</a>
           </li>
-          <li class="item" routerLink="/shoppings" routerLinkActive="active" (click)="closeSidebar()">
+          <li class="item" routerLink="/shoppingview" routerLinkActive="active" (click)="closeSidebar()">
             <i class="bi bi-basket2 mr-2" style="color:crimson;"></i><a>Compras</a>
           </li>
         </ul>
