--- a/FRONT-END/src/app/modules/shoppings/shoppingscreate.component.html
+++ b/FRONT-END/src/app/modules/shoppings/shoppingscreate.component.html
@@ -1,4 +1,4 @@
-<h2 class="title" style="text-align: center;">Compras</h2>
+<h2 class="title" style="text-align: center;">Crear Compras</h2>
 
 <form [formGroup]="shoppingForm" (ngSubmit)="saveShopping()" class="shopping-form">
     <!-- Formulario de Compra (Shoppings) -->
