--- a/FRONT-END/src/app/modules/shoppings/shoppingscreate.component.html
+++ b/FRONT-END/src/app/modules/shoppings/shoppingscreate.component.html
@@ -1,3 +1,6 @@
+
+
+
 <a routerLink="/Shoppinview" routerLinkActive="active">
     <i class="pi pi-angle-left" style="font-size: 1.5rem;color: gray;"></i>
 </a>
@@ -5,56 +8,52 @@
 
 <form [formGroup]="shoppingForm" (ngSubmit)="saveShopping()" class="shopping-form">
     <!-- Formulario de Compra (Shoppings) -->
+    <div formGroupName="shopping">
+        <div class="field-group">
+            <div class="field" [ngClass]="{'error': isFieldInvalid('shopping', 'idProveedor')}">
+                <label for="proveedor">Proveedor</label>
+                <div class="p-inputgroup">
+                    <p-dropdown [options]="providers" formControlName="idProveedor" optionLabel="nombreProveedor"
+                        optionValue="idProveedor" placeholder="Seleccionar proveedor" [virtualScroll]="false"
+                        [virtualScrollItemSize]="38" styleClass="w-full">
+                    </p-dropdown>
+                </div>
+                <small class="p-error" *ngIf="isFieldInvalid('shopping', 'idProveedor')">
+                    {{ getErrorMessage('shopping', 'idProveedor') }}
+                </small>
+            </div>
 
-    <div class="field-group">
-
-        <div class="field" [ngClass]="{'error': isFieldInvalid('idProveedor')}">
-            <label for="proveedor">Proveedor</label>
-            <div class="p-inputgroup">
-                <p-dropdown [options]="providers" formControlName="idProveedor" optionLabel="nombreProveedor"
-                    optionValue="idProveedor" placeholder="Seleccionar proveedor" [virtualScroll]="false"
-                    [virtualScrollItemSize]="38" styleClass="w-full">
-                </p-dropdown>
+            <div class="field" [ngClass]="{'error': isFieldInvalid('shopping', 'fechaCompra')}">
+                <label for="fechaCompra">Fecha Compra</label>
+                <input type="date" pInputText id="fechaCompra" formControlName="fechaCompra" required autofocus />
+                <small class="p-error" *ngIf="isFieldInvalid('shopping', 'fechaCompra')">
+                    {{ getErrorMessage('shopping', 'fechaCompra') }}
+                </small>
             </div>
         </div>
 
-        <div class="field" [ngClass]="{'error': isFieldInvalid('fechaCompra')}">
-            <label for="fechaCompra">fecha Compra</label>
-            <input type="date" pInputText id="fechaCompra" formControlName="fechaCompra" required autofocus />
-            <small class="p-error" *ngIf="isFieldInvalid('fechaCompra')">
-                {{ getErrorMessage('fechaCompra') }}
-            </small>
+        <div class="field-group mb-5">
+            <div class="field" [ngClass]="{'error': isFieldInvalid('shopping', 'numeroFactura')}">
+                <label for="numeroFactura">Número Factura</label>
+                <input type="text" pInputText id="numeroFactura" formControlName="numeroFactura" required autofocus />
+                <small class="p-error" *ngIf="isFieldInvalid('shopping', 'numeroFactura')">
+                    {{ getErrorMessage('shopping', 'numeroFactura') }}
+                </small>
+            </div>
+
+            <div class="field">
+                <label for="valorCompra">Valor Compra</label>
+                <input type="number" pInputText id="valorCompra" formControlName="valorCompra" readonly />
+            </div>
         </div>
-
-    </div>
-
-
-
-
-
-    <div class="field-group mb-5">
-
-        <div class="field" [ngClass]="{'error': isFieldInvalid('numeroFactura')}">
-            <label for="numeroFactura">numero Factura</label>
-            <input type="number" pInputText id="numeroFactura" formControlName="numeroFactura" required autofocus />
-            <small class="p-error" *ngIf="isFieldInvalid('numeroFactura')">
-                {{ getErrorMessage('numeroFactura') }}
-            </small>
-        </div>
-
-        <div class="field">
-            <label for="valorCompra">valor Compra</label>
-            <input type="number" pInputText id="valorCompra" formControlName="valorCompra" autofocus />
-        </div>
-
     </div>
 
     <div class="divider"></div>
 
     <!-- Formulario de Detalles de Compra (ShoppingDetails) -->
-    <div formArrayName="detalles" class="details-container">
-        <div *ngFor="let detail of detalles.controls; let i = index" class="details-row">
-            <div class="field" [ngClass]="{'error': isFieldInvalid('idProducto')}">
+    <div formArrayName="shoppingDetail" class="details-container">
+        <div *ngFor="let detail of shoppingDetailArray.controls; let i = index" [formGroupName]="i" class="details-row">
+            <div class="field" [ngClass]="{'error': isFieldInvalid('shoppingDetail.' + i, 'idProducto')}">
                 <label for="producto">Producto</label>
                 <div class="p-inputgroup">
                     <p-autoComplete formControlName="idProducto" [suggestions]="filteredProducts"
@@ -62,25 +61,35 @@
                         placeholder="Buscar" [forceSelection]="true" styleClass="w-full">
                     </p-autoComplete>
                 </div>
+                <small class="p-error" *ngIf="isFieldInvalid('shoppingDetail.' + i, 'idProducto')">
+                    {{ getErrorMessage('shoppingDetail.' + i, 'idProducto') }}
+                </small>
             </div>
-            <div class="field">
+            <div class="field" [ngClass]="{'error': isFieldInvalid('shoppingDetail.' + i, 'codigoBarra')}">
                 <label for="codigoBarra">Código de Barra:</label>
                 <input type="text" formControlName="codigoBarra" pInputText>
+                <small class="p-error" *ngIf="isFieldInvalid('shoppingDetail.' + i, 'codigoBarra')">
+                    {{ getErrorMessage('shoppingDetail.' + i, 'codigoBarra') }}
+                </small>
             </div>
-            <div class="field">
+            <div class="field" [ngClass]="{'error': isFieldInvalid('shoppingDetail.' + i, 'cantidadProducto')}">
                 <label for="cantidadProducto">Cantidad:</label>
                 <input type="number" formControlName="cantidadProducto" (input)="calculateSubtotal(i)" pInputText>
+                <small class="p-error" *ngIf="isFieldInvalid('shoppingDetail.' + i, 'cantidadProducto')">
+                    {{ getErrorMessage('shoppingDetail.' + i, 'cantidadProducto') }}
+                </small>
             </div>
-            <div class="field">
+            <div class="field" [ngClass]="{'error': isFieldInvalid('shoppingDetail.' + i, 'precioCompraUnidad')}">
                 <label for="precioCompraUnidad">Precio x Unidad:</label>
                 <input type="number" formControlName="precioCompraUnidad" (input)="calculateSubtotal(i)" pInputText>
+                <small class="p-error" *ngIf="isFieldInvalid('shoppingDetail.' + i, 'precioCompraUnidad')">
+                    {{ getErrorMessage('shoppingDetail.' + i, 'precioCompraUnidad') }}
+                </small>
             </div>
-
             <div class="field">
                 <label>Subtotal:</label>
-                <input type="text" formControlName="subtotal" pInputText>
+                <input type="text" formControlName="subtotal" pInputText readonly>
             </div>
-
             <div class="field">
                 <button type="button" (click)="removeShoppingDetail(i)" class="p-button p-button-danger mt-5">
                     <i class="pi pi-trash"></i>
