--- a/FRONT-END/src/app/login/login.component.html
+++ b/FRONT-END/src/app/login/login.component.html
@@ -52,7 +52,7 @@
         
         <!-- Link "¿Olvidaste tu contraseña?" -->
         <div class="text-right">
-          <a href="#" class="text-sm text-blue-600 hover:underline">¿Olvidaste tu contraseña?</a>
+          <a href="../recover" class="text-sm text-blue-600 hover:underline">¿Olvidaste tu contraseña?</a>
         </div>
       </div>
       
