--- a/FRONT-END/src/app/modules/return-provider/return-provider.component.html
+++ b/FRONT-END/src/app/modules/return-provider/return-provider.component.html
@@ -7,9 +7,10 @@
 [canExport]="false" 
 [canEdit]="false"
 [canSeeDetail]="false"
+[SelectChangeStatus]="true"
 
 [canChangeStatus]="false"
-[showStateColumn]="false"
+[showStateColumn]="true"
 [statusField]="'estado'"
 
 [actions]="false" 
