--- a/FRONT-END/src/app/shared/crud/crud.component.html
+++ b/FRONT-END/src/app/shared/crud/crud.component.html
@@ -7,53 +7,68 @@
         class="p-button-help p-button-rounded p-button-outlined" (click)="onExport()"></button>
     </div>
     <div class="relative flex items-center space-x-2 ml-auto">
-      <input pInputText type="text" [(ngModel)]="searchQuery" (input)="onSearch()" placeholder="Buscar" class="search-input" />
+      <input pInputText type="text" [(ngModel)]="searchQuery" (input)="onSearch()" placeholder="Buscar"
+        class="search-input" />
       <i *ngIf="searchQuery"
         class="pi pi-times absolute top-3 right-3 transform -translate-y-1/2 cursor-pointer text-gray-500"
         (click)="clearSearch()"></i>
     </div>
-  </div>  
+  </div>
 
   <div class="table-container">
     <p-table [value]="items" [tableStyle]="{'min-width': '50rem', 'margin': '0 auto', 'text-align': 'center'}"
       sortMode="multiple" [paginator]="true" [rows]="5" [showCurrentPageReport]="true"
-      currentPageReportTemplate="Mostrando {last} de {totalRecords} registros"
-      [rowsPerPageOptions]="[5, 10, 25]">
-  
+      currentPageReportTemplate="Mostrando {last} de {totalRecords} registros" [rowsPerPageOptions]="[5, 10, 25]">
+
       <!-- Encabezado de la tabla -->
       <ng-template pTemplate="header">
         <tr>
           <th *ngFor="let col of columns" [pSortableColumn]="col.field" [style]="{'text-align': 'center'}">
             {{col.header}} <p-sortIcon [field]="col.field"></p-sortIcon>
           </th>
+          
           <th *ngIf="showStateColumn" [style]="{'text-align': 'center'}">Estado</th>
           <th *ngIf="creditColumn" [style]="{'text-align': 'center'}">Abonar</th>
           <th *ngIf="creditColumn" [style]="{'text-align': 'center'}">Historial</th>
           <th *ngIf="actions" [style]="{'text-align': 'center'}">Acciones</th>
         </tr>
       </ng-template>
-  
+
       <!-- Cuerpo de la tabla -->
       <ng-template pTemplate="body" let-item>
         <tr>
           <td *ngFor="let col of columns"
-          [style]="{'word-wrap': 'break-word', 'white-space': 'normal', 'text-align': 'center'}">
-          <!-- Valida si el valor es una URL de imagen -->
-          <ng-container *ngIf="col.field === 'imagenProducto'; else textContent">
-            <img *ngIf="item[col.field]" [src]="getImageUrl(item.idProducto)" alt="{{item[col.field]}}" class="w-24 h-24 object-cover"/>
-          </ng-container>
-  
-          <ng-template #textContent>
-            {{item[col.field]}}
-          </ng-template>
-        </td>
-  
+            [style]="{'word-wrap': 'break-word', 'white-space': 'normal', 'text-align': 'center'}">
+            <!-- Valida si el valor es una URL de imagen -->
+            <ng-container *ngIf="col.field === 'imagenProducto'; else textContent">
+              <img *ngIf="item[col.field]" [src]="getImageUrl(item.idProducto)" alt="{{item[col.field]}}"
+                class="w-24 h-24 object-cover" />
+            </ng-container>
+
+            <ng-template #textContent>
+              {{item[col.field]}}
+            </ng-template>
+            
+          </td>
+          <td *ngIf="SelectChangeStatus" [style]="{'text-align': 'center'}">
+            <div class="flex justify-center items-center">
+              <!-- Reemplazamos el botón por el select -->
+              <select [ngClass]="getSelectStatus(item) ? 'true-chip tipo-chip' : 'false-chip tipo-chip'">
+                <option value="Por notificar" (onClick)="confirmChangeStatus(item)" [selected]="getSelectStatus(item) ">Por notificar</option>
+                <option value="Notificado" (onClick)="confirmChangeStatus(item)" [selected]="getSelectStatus(item)">Notificado</option>
+                <option value="En proceso" (onClick)="confirmChangeStatus(item)" [selected]="getSelectStatus(item)">En proceso</option>
+                <option value="Finalizado" (onClick)="confirmChangeStatus(item)" [selected]="getSelectStatus(item)">Finalizado</option>
+              </select>
+            </div>
+          </td>
+
           <td *ngIf="canInstallment" [style]="{'text-align': 'center'}">
             <button *ngIf="canInstallment" pButton pRipple icon="pi pi-money-bill"
               class="p-button-rounded p-button-success p-button-outlined p-button-sm mr-2"
               (click)="onInstallment(item)"></button>
           </td>
-  
+          
+
           <td *ngIf="canChangeStatus" [style]="{'text-align': 'center'}">
             <div class="flex justify-center items-center">
               <p-button [rounded]="true" [label]="getStatus(item) ? 'Activo' : 'Inactivo'"
@@ -61,17 +76,21 @@
                 (onClick)="confirmChangeStatus(item)"></p-button>
             </div>
           </td>
-          
-  
+
+
+
           <td [style]="{'text-align': 'center'}">
             <div class="flex justify-center">
               <button *ngIf="canEdit" pButton pRipple icon="pi pi-pencil"
-                class="p-button-rounded p-button-info p-button-outlined p-button-sm mr-2" (click)="onEdit(item)"></button>
+                class="p-button-rounded p-button-info p-button-outlined p-button-sm mr-2"
+                (click)="onEdit(item)"></button>
               <button *ngIf="canDelete" pButton pRipple icon="pi pi-trash"
                 class="p-button-rounded p-button-danger p-button-outlined p-button-sm mr-2"
                 (click)="onDelete(item)"></button>
               <button *ngIf="canSeeDetail" pButton pRipple icon="pi pi-eye"
-                class="p-button-rounded p-button-warning p-button-outlined p-button-sm" (click)="onDetail(item)"></button>
+                class="p-button-rounded p-button-warning p-button-outlined p-button-sm"
+                (click)="onDetail(item)"></button>
+                
             </div>
           </td>
         </tr>
