funcion buscar todos los codigos

--- a/FRONT-END/src/app/modules/shoppings/shoppingscreate.component.html
+++ b/FRONT-END/src/app/modules/shoppings/shoppingscreate.component.html
@@ -99,7 +99,7 @@
     </div>
 
     <button type="button" (click)="addShoppingDetail()" class="p-button p-button-secondary mr-3">
-        <i class="pi pi-plus"></i> Agregar Detalle
+        <i class="pi pi-plus"></i> Agregar producto
     </button>
     <button type="submit" class="p-button p-button-success">Guardar Compra</button>
 </form>
