--- a/FRONT-END/src/app/modules/shoppinview/shoppinview.component.html
+++ b/FRONT-END/src/app/modules/shoppinview/shoppinview.component.html
@@ -1,15 +1,35 @@
 <h2 class="title" style="text-align: center;">Compras</h2>
 
-<app-crud [items]="filteredShoppings" 
-[columns]="columns" 
-[canDelete]="false" 
-[canEdit]="false" 
-[canSeeDetail]="true"
-[canChangeStatus]="true" 
-[showStateColumn]="true" 
-[statusField]="'estadoCompra'" 
-
-(create)="openShopping()"
-(search)="searchShopping($event)" 
-(statusChange)="changeShoppingStatus($event)">
+<app-crud [items]="filteredShoppings" [columns]="columns" [canDelete]="false" [canEdit]="false" [canSeeDetail]="true"
+    [canChangeStatus]="true" [showStateColumn]="true" [statusField]="'estadoCompra'" (create)="openShopping()"
+    (search)="searchShopping($event)" (detail)="openShowModal($event)" (statusChange)="changeShoppingStatus($event)">
 </app-crud>
+
+<p-dialog [(visible)]="viewModal" [style]="{width: '600px'}" [modal]="true" class="p-fluid">
+    <ng-template pTemplate="header">
+        Detalles de la Compra
+    </ng-template>
+    <ng-template pTemplate="content">
+        <!-- Tabla con los detalles de la compra -->
+        <p-table [value]="shoppingdetails" [paginator]="true" [rows]="10">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Producto</th>
+                    <th>Código Barra</th>
+                    <th>Cantidad</th>
+                    <th>Precio Unidad</th>
+                    <th>Subtotal</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-item>
+                <tr>
+                    <td>{{ getProductName(item.idProducto) }} </td>
+                    <td>{{item.codigoBarra}}</td>
+                    <td>{{item.cantidadProducto}}</td>
+                    <td>{{item.precioCompraUnidad | currency}}</td>
+                    <td>{{item.subtotal | currency}}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </ng-template>
+</p-dialog>
