--- a/FRONT-END/src/app/Auth/login/login.component.html
+++ b/FRONT-END/src/app/Auth/login/login.component.html
@@ -7,60 +7,68 @@
       <h2 class="mt-6 text-3xl font-extrabold text-gray-900">Tienda Santa Clara</h2>
       <p class="mt-2 text-sm text-gray-600">Inicia sesión en tu cuenta</p>
     </div>
-    
-    <form (ngSubmit)="onSubmit()" #form="ngForm" class="mt-8 space-y-6">
+
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="mt-8 space-y-6">
       <div class="space-y-6">
         <!-- Campo de correo -->
+
         <div class="relative">
           <label for="correoUsuario" class="text-sm font-medium text-gray-700">Correo</label>
-          <div class="flex items-center border border-gray-300 rounded-md focus-within:ring-2 focus-within:ring-green-600"
-               [ngClass]="{'border-red-500': correoUsuario && !emailPattern.test(correoUsuario)}">
+
+          <div
+            class="flex items-center border border-gray-300 rounded-md focus-within:ring-2 focus-within:ring-green-600"
+            [ngClass]="{'error': isFieldInvalid('correoUsuario')}">
+
             <div class="pl-3">
               <i class="fas fa-user text-gray-400"></i>
             </div>
-            <input [(ngModel)]="correoUsuario" name="correoUsuario" type="email" required
-                   (blur)="validateEmail()"
-                   class="pl-3 w-full py-2 focus:outline-none focus:border-transparent"
-                   placeholder="Ingresa tu correo" />
+
+            <input type="email" pInputText id="correoUsuario" formControlName="correoUsuario"
+              placeholder="Ingresa tu correo" class="pl-3 w-full py-2 focus:outline-none focus:border-transparent" />
           </div>
-          <p *ngIf="correoUsuario && !emailPattern.test(correoUsuario)" class="text-red-500 text-xs mt-1">
-            El correo electrónico debe tener un formato válido
-          </p>
+          <small class="p-error" *ngIf="isFieldInvalid('correoUsuario')">
+            {{ getErrorMessage('correoUsuario') }}
+          </small>
         </div>
-        
+
         <!-- Campo de contraseña -->
         <div class="relative">
+
           <label for="claveUsuario" class="text-sm font-medium text-gray-700">Contraseña</label>
-          <div class="flex items-center border border-gray-300 rounded-md focus-within:ring-2 focus-within:ring-green-600"
-               [ngClass]="{'border-red-500': claveUsuario && !passwordPattern.test(claveUsuario)}">
+
+          <div
+            class="flex items-center border border-gray-300 rounded-md focus-within:ring-2 focus-within:ring-green-600"
+            [ngClass]="{'error': isFieldInvalid('claveUsuario')}">
+
             <div class="pl-3">
               <i class="fas fa-lock text-gray-400"></i>
             </div>
-            <input [(ngModel)]="claveUsuario" name="claveUsuario" [type]="showPassword ? 'text' : 'password'" required
-                   (blur)="validatePassword()"
-                   class="pl-3 w-full py-2 focus:outline-none focus:border-transparent"
-                   placeholder="Ingresa tu contraseña" />
+
+            <input type="password" pInputText id="claveUsuario" formControlName="claveUsuario"
+              [type]="showPassword ? 'text' : 'password'"
+              class="pl-3 w-full py-2 focus:outline-none focus:border-transparent" placeholder="Ingresa tu contraseña"
+              required />
+
             <div class="pr-3">
-              <i (click)="toggleShowPassword()" class="fas" [class.fa-eye]="showPassword" [class.fa-eye-slash]="!showPassword"
-                 style="cursor: pointer; color: #6b7280;"></i>
+              <i (click)="toggleShowPassword()" class="fas" [class.fa-eye]="showPassword"
+                [class.fa-eye-slash]="!showPassword" style="cursor: pointer; color: #6b7280;"></i>
             </div>
           </div>
-          <p *ngIf="claveUsuario && !passwordPattern.test(claveUsuario)" class="text-red-500 text-xs mt-1">
-            La contraseña debe tener entre 8 y 16 caracteres, incluir al menos una mayúscula, una minúscula y un número
-          </p>
+          <small class="p-error" *ngIf="isFieldInvalid('claveUsuario')">
+            {{ getErrorMessage('claveUsuario') }}
+          </small>
         </div>
-        
+
         <!-- Link "¿Olvidaste tu contraseña?" -->
         <div class="text-right">
           <a href="../recover" class="text-sm text-blue-600 hover:underline">¿Olvidaste tu contraseña?</a>
         </div>
       </div>
-      
+
       <!-- Botón de inicio de sesión -->
       <div>
-        <button type="submit" [disabled]="!form.form.valid" 
-                class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-md transition duration-300 ease-in-out transform hover:scale-105"
-                [ngClass]="{'opacity-50 cursor-not-allowed': !form.form.valid}">
+        <!-- [disabled]="loginForm.invalid" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-md transition duration-300 ease-in-out transform hover:scale-105" [ngClass]="{'opacity-50 cursor-not-allowed': loginForm.invalid}" -->
+        <button type="submit">
           Iniciar Sesión
         </button>
       </div>
